[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

[dependencies]
# aoc-runner = "0.3.0"
# aoc-runner-derive = "0.3.0"
aoc-runner = { git = "https://github.com/pedantic79/cargo-aoc.git", branch = "new-criterion", package = "aoc-runner" }
aoc-runner-derive = { git = "https://github.com/pedantic79/cargo-aoc.git", branch = "new-criterion", package = "aoc-runner-derive" }
nom = "7.1.0"
num = "0.4.0"
itertools = "0.10.3"
rayon = "1.5.1"
pathfinding = "3"
nohash-hasher = "0.2.0"
rustc-hash = "1.1.0"
ahash = "0.8.0"
arrayvec = "0.7.2"
stable-pattern = "0.1.0"
once_cell = "1"
bit-set = "0.5"

[profile.release]
lto = "fat"
panic = "abort"
