[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
nom = "7.1.3"
num = "0.4.3"
itertools = "0.14.0"
rayon = "1.5.1"
pathfinding = "4.13.1"
nohash-hasher = "0.2.0"
rustc-hash = "2.1.0"
ahash = "0.8.0"
arrayvec = "0.7.2"
stable-pattern = "0.1.0"
once_cell = "1"
bit-set = "0.8"

[profile.release]
lto = "fat"
panic = "abort"
