[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
nom = "8.0.0"
num = "0.4.3"
itertools = "0.14.0"
rayon = "1.10.0"
pathfinding = "4.14.0"
nohash-hasher = "0.2.0"
rustc-hash = "2.1.1"
ahash = "0.8.11"
arrayvec = "0.7.6"
stable-pattern = "0.1.0"
once_cell = "1"
bit-set = "0.8"

[profile.release]
lto = "fat"
panic = "abort"
